Adds HORDE conventions.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li>
-                <a TODO href="http://ellislab.com/codeigniter/user-guide/general/styleguide.html">
+                <a href="http://ellislab.com/codeigniter/user-guide/general/styleguide.html">
                     CodeIgniter  
                 </a>
             </li>
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li>
-                <a TODO href="http://www.horde.org/apps/horde/docs/?f=CODING_STANDARDS.html">
+                <a href="http://www.horde.org/apps/horde/docs/?f=CODING_STANDARDS.html">
                     HORDE
                 </a>
             </li>
