--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </a>
             </li>
             <li>
-                <a TODO href="http://symfony.com/doc/current/contributing/code/standards.html">
+                <a href="http://symfony.com/doc/current/contributing/code/standards.html">
                     Symfony
                 </a>
             </li>
