Adds conventions for TYPO3.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </a>
             </li>
             <li>
-                <a TODO href="http://docs.typo3.org/flow/TYPO3FlowDocumentation/TheDefinitiveGuide/PartV/CodingGuideLines/Index.html">
+                <a href="http://docs.typo3.org/flow/TYPO3FlowDocumentation/TheDefinitiveGuide/PartV/CodingGuideLines/Index.html">
                     TYPO3
                 </a>
             </li>
