Fixes renaming of Vendor JS lib.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="//cdn.jsdelivr.net/prefixfree/1.0.7/prefixfree.dynamic-dom.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-    <script src="//rawgithub.com/jackmoore/zoom/master/jquery.zoom-min.js"></script>
+    <script src="//rawgithub.com/jackmoore/zoom/master/jquery.zoom.min.js"></script>
 
 </head>
 
