Adds Github banner to index file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Overview of PHP Coding Conventions</title>
 
     <link rel="stylesheet" href="http://potherca.github.io/CssBase/css/base.css" />
+    <link rel="stylesheet" href="http://potherca.github.io/CssBase/css/ribbon.css" />
     <link rel="stylesheet" href="styles.css" />
 
     <script src="//cdn.jsdelivr.net/prefixfree/1.0.7/prefixfree.dynamic-dom.min.js"></script>
@@ -88,6 +89,11 @@
             <img src="PHP-coding-standards.dot.png" />
         </a>
     </article>
+    
+    <aside class="banner banner-right banner-fixed">
+        <a href="//github.com/potherca/PhpCodingConventions/">See code on Github</a>
+    </aside>
+
     <script>
     $('img')
         .wrap('<span class="js-image-zoom"></span>')
